Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-10350

[PATCH] servman does not arrange objects after changing view

    XMLWordPrintable

Details

    Description

      After changing the view to LVS_ICON or LVS_SMALLICON, servman does not arrange the objects in the listview.
      This shows icons or lists without proper ordering even if there is enough space, see attached screenshots.
      Attached patch fixes the bug.

      Attachments

        1. bug1.png
          bug1.png
          10 kB
        2. bug2.png
          bug2.png
          9 kB
        3. servman.txt
          1 kB

        Activity

          People

            ekohl ekohl
            Carlo Bramix Carlo Bramix
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: