[SERVMAN] Arrange large and small icons after changing the view. Patch by Carlo Bramini. #CORE-10350 #resolve #comment Thanks a lot!

svn path=/trunk/; revision=70288